UPDATE: Modif du nom
QuizHaven to quiz-IT

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,6 @@
 <div class="hero">
     <div class="hero-subtitle">La meilleure plateforme de quiz en ligne</div>
-    <h1 class="hero-title">Testez vos connaissances avec QuizHaven</h1>
+    <h1 class="hero-title">Testez vos connaissances avec Quiz-IT</h1>
     <p class="hero-description">Découvrez des milliers de questions dans différentes catégories et défiez vos amis pour devenir le maître du quiz.</p>
     <div class="cta-buttons">
         <a href="#" class="btn btn-primary">Commencer maintenant →</a>
