--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar">
-    <div class="logo">Quizz-IT</div>
+    <div class="logo">Quiz-IT</div>
     <div class="nav-links">
         <a routerLink="/home">Accueil</a>
         <a routerLink="/quiz">Quiz</a>
