--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,3 @@
 <app-navbar></app-navbar>
-<main><app-home></app-home>
-<app-categories></app-categories> </main>
+<main><app-home></app-home></main>
 <app-footer></app-footer>
