--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -6,6 +6,6 @@
         <a routerLink="/ranking">Classement</a>
         <a routerLink="/results">Résultat</a>
         <a routerLink="/dashboard">Tableau de bord</a>
-        <a routerLink="/connexion">Connexion</a>
+        <a routerLink="/connexion" class = 'connexion'>Connexion</a>
     </div>
 </nav>
