Update: added connexion screen
Added a login screen, did it by changing the connexionComponent, homeComponent, creating 2 services and also added few colors to the general css file

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -6,6 +6,6 @@
         <a routerLink="/ranking">Classement</a>
         <a routerLink="/results">Résultat</a>
         <a routerLink="/dashboard">Tableau de bord</a>
-        <a routerLink="/connexion" class = 'connexion'>Connexion</a>
+        <a (click)="goToConnection()" class='connexion' style="cursor: pointer;">Connexion</a>
     </div>
 </nav>
