--- a/src/app/connexion/connexion.component.html
+++ b/src/app/connexion/connexion.component.html
@@ -1,1 +1,39 @@
-<p>connexion works!</p>
+<div class="login-container">
+  <div class="mode-switcher">
+    <button [class.active]="isLogin" (click)="switchStates()" [disabled]="isLogin">Login</button>
+    <button [class.active]="!isLogin" (click)="switchStates()" [disabled]="!isLogin">Sign Up</button>
+  </div>
+
+  <h2>{{ isLogin ? 'Login' : 'Sign Up' }}</h2>
+
+  <form #connexionForm="ngForm" (ngSubmit)="isLogin ? login() : signUp()">
+
+    <div class="form-group">
+      <label for="username">Username</label>
+      <input type="text" id="username" name="username" [(ngModel)]="username" required>
+    </div>
+
+    <div class="signup-fields" [ngClass]="{ 'active': !isLogin }">
+      <div class="form-group">
+        <label for="email">Email</label>
+        <input type="email" id="email" name="email" [(ngModel)]="email" [required]="!isLogin"> </div>
+
+      <div class="form-group">
+        <label for="confPassword">Confirm Password</label>
+        <input type="password" id="confPassword" name="confPassword" [(ngModel)]="confPassword" [required]="!isLogin"> </div>
+    </div>
+
+    <div class="form-group">
+      <label for="password">Password</label>
+      <input type="password" id="password" name="password" [(ngModel)]="password" required>
+    </div>
+
+    <button type="submit" [disabled]="!connexionForm.form.valid">
+      {{ isLogin ? 'Login' : 'Sign Up' }}
+    </button>
+
+    <div *ngIf="errorMessage" class="error-message">
+      {{ errorMessage }}
+    </div>
+  </form>
+</div>
