--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,10 +1,15 @@
-<div class="hero">
-    <div class="hero-subtitle">La meilleure plateforme de quiz en ligne</div>
-    <h1 class="hero-title">Testez vos connaissances avec Quiz-IT</h1>
-    <p class="hero-description">Découvrez des milliers de questions dans différentes catégories et défiez vos amis pour devenir le maître du quiz.</p>
-    <div class="cta-buttons">
-        <a href="#" class="btn btn-primary">Commencer maintenant →</a>
-        <a href="#" class="btn btn-secondary">En savoir plus</a>
-    </div>
+<div *ngIf="showLoginScreen">
+    <app-connexion></app-connexion>
 </div>
-<app-categories></app-categories>
+<div *ngIf = "!showLoginScreen">
+    <div class="hero">
+        <div class="hero-subtitle">La meilleure plateforme de quiz en ligne</div>
+        <h1 class="hero-title">Testez vos connaissances avec Quiz-IT</h1>
+        <p class="hero-description">Découvrez des milliers de questions dans différentes catégories et défiez vos amis pour devenir le maître du quiz.</p>
+        <div class="cta-buttons">
+            <a href="#" class="btn btn-primary">Commencer maintenant →</a>
+            <a href="#" class="btn btn-secondary">En savoir plus</a>
+        </div>
+    </div>
+    <app-categories></app-categories>
+</div>
