--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -40,7 +40,7 @@
     color: var(--color-violet);
 }
 .connexion {
-    background-color: #4255ff;
+    background-color: var(--color-blue);
     border-radius: 20px;
     min-width:90px;  
     min-height: 35px; 
@@ -52,6 +52,6 @@
 .navbar .nav-links a.connexion { 
     color: white; 
 }
-.navbar .nav-links a.connexion:hover {
-    color: var(--black);
+.navbar .nav-links .connexion:hover {
+    opacity: 90%;
 }
