--- a/src/app/connexion/connexion.component.html
+++ b/src/app/connexion/connexion.component.html
@@ -1,39 +1,38 @@
 <div class="login-container">
   <div class="mode-switcher">
-    <button [class.active]="isLogin" (click)="switchStates()" [disabled]="isLogin">Login</button>
-    <button [class.active]="!isLogin" (click)="switchStates()" [disabled]="!isLogin">Sign Up</button>
+    <button [class.active]="isLogin" (click)="switchStates()" [disabled]="isLogin">Connexion</button>
+    <button [class.active]="!isLogin" (click)="switchStates()" [disabled]="!isLogin">Inscription</button>
   </div>
 
-  <h2>{{ isLogin ? 'Login' : 'Sign Up' }}</h2>
+  <h2>{{ isLogin ? 'Connexion' : 'Inscription' }}</h2>
 
   <form #connexionForm="ngForm" (ngSubmit)="isLogin ? login() : signUp()">
 
     <div class="form-group">
-      <label for="username">Username</label>
+      <label for="username">Nom d'utilisateur</label>
       <input type="text" id="username" name="username" [(ngModel)]="username" required>
     </div>
 
-    <div class="signup-fields" [ngClass]="{ 'active': !isLogin }">
-      <div class="form-group">
-        <label for="email">Email</label>
-        <input type="email" id="email" name="email" [(ngModel)]="email" [required]="!isLogin"> </div>
-
-      <div class="form-group">
-        <label for="confPassword">Confirm Password</label>
-        <input type="password" id="confPassword" name="confPassword" [(ngModel)]="confPassword" [required]="!isLogin"> </div>
+    <div class="form-group signup-fields" [ngClass]="{ 'active': !isLogin }">
+      <label for="email">Email</label>
+      <input type="email" id="email" name="email" [(ngModel)]="email" [required]="!isLogin">
     </div>
 
     <div class="form-group">
-      <label for="password">Password</label>
+      <label for="password">Mot de passe</label>
       <input type="password" id="password" name="password" [(ngModel)]="password" required>
     </div>
 
+    <div class="form-group signup-fields" [ngClass]="{ 'active': !isLogin }">
+      <label for="confPassword">Confirmer le mot de passe</label>
+      <input type="password" id="confPassword" name="confPassword" [(ngModel)]="confPassword" [required]="!isLogin">
+    </div>
+
     <button type="submit" [disabled]="!connexionForm.form.valid">
-      {{ isLogin ? 'Login' : 'Sign Up' }}
+      {{ isLogin ? 'Connexion' : 'Inscription' }}
     </button>
 
     <div *ngIf="errorMessage" class="error-message">
-      {{ errorMessage }}
-    </div>
+      {{ errorMessage }} </div>
   </form>
 </div>
