--- a/src/app/connexion/connexion.component.css
+++ b/src/app/connexion/connexion.component.css
@@ -140,6 +140,28 @@ button:disabled {
 .signup-fields .form-group {
     margin-bottom: 15px;
 }
+
 .signup-fields .form-group:last-child {
     margin-bottom: 0;
+}
+
+.error-field {
+    color: var(--color-error, #dc3545);
+    font-size: 0.8em;
+    margin-top: 4px;
+}
+
+input.ng-invalid.ng-touched {
+     border-color: var(--color-error, #dc3545);
+}
+
+input.ng-invalid[formControlName="confPassword"] {
+      border-color: var(--color-error)
+}
+.title {
+  display:flex;
+  justify-content: center;
+  margin-bottom: 20px;
+  margin-top: 20px;
+  color: var(--color-violet);
 }
