--- a/src/app/connexion/connexion.component.html
+++ b/src/app/connexion/connexion.component.html
@@ -1,38 +1,48 @@
 <div class="login-container">
   <div class="mode-switcher">
-    <button [class.active]="isLogin" (click)="switchStates()" [disabled]="isLogin">Connexion</button>
-    <button [class.active]="!isLogin" (click)="switchStates()" [disabled]="!isLogin">Inscription</button>
+    <button type="button" [class.active]="isLogin" (click)="switchStates()" [disabled]="isLogin">Connexion</button>
+    <button type="button" [class.active]="!isLogin" (click)="switchStates()" [disabled]="!isLogin">Inscription</button>
   </div>
 
-  <h2>{{ isLogin ? 'Connexion' : 'Inscription' }}</h2>
+  <h2 class = 'title'>{{ isLogin ? 'Connexion' : 'Inscription' }}</h2>
 
-  <form #connexionForm="ngForm" (ngSubmit)="isLogin ? login() : signUp()">
-
+  <form [formGroup]="connexionForm" (ngSubmit)="isLogin ? login() : signUp()">
     <div class="form-group">
       <label for="username">Nom d'utilisateur</label>
-      <input type="text" id="username" name="username" [(ngModel)]="username" required>
+      <input type="text" id="username" formControlName="username">
+      <div *ngIf="username?.invalid && (username?.dirty || username?.touched)" class="error-field">
+        <small *ngIf="username?.errors?.['required']">Nom d'utilisateur requis.</small>
+      </div>
     </div>
-
-    <div class="form-group signup-fields" [ngClass]="{ 'active': !isLogin }">
+    <div class="form-group signup-fields" [class.active]="!isLogin">
       <label for="email">Email</label>
-      <input type="email" id="email" name="email" [(ngModel)]="email" [required]="!isLogin">
+      <input type="email" id="email" formControlName="email">
+       <div *ngIf="email?.invalid && (email?.dirty || email?.touched)" class="error-field">
+        <small *ngIf="email?.errors?.['required']">Email requis.</small>
+        <small *ngIf="email?.errors?.['email']">Format d'email invalide.</small>
+      </div>
     </div>
-
     <div class="form-group">
       <label for="password">Mot de passe</label>
-      <input type="password" id="password" name="password" [(ngModel)]="password" required>
+      <input type="password" id="password" formControlName="password">
+       <div *ngIf="password?.invalid && (password?.dirty || password?.touched)" class="error-field">
+        <small *ngIf="password?.errors?.['required']">Mot de passe requis.</small>
+      </div>
     </div>
 
-    <div class="form-group signup-fields" [ngClass]="{ 'active': !isLogin }">
+    <div class="form-group signup-fields" [class.active]="!isLogin">
       <label for="confPassword">Confirmer le mot de passe</label>
-      <input type="password" id="confPassword" name="confPassword" [(ngModel)]="confPassword" [required]="!isLogin">
+      <input type="password" id="confPassword" formControlName="confPassword">
+       <div *ngIf="confPassword?.invalid && (confPassword?.dirty || confPassword?.touched)" class="error-field">
+        <small *ngIf="confPassword?.errors?.['required']">Confirmation requise.</small>
+      </div>
     </div>
 
-    <button type="submit" [disabled]="!connexionForm.form.valid">
+    <button type="submit" [disabled]="(isLogin && (username?.invalid || password?.invalid)) || (!isLogin && connexionForm.invalid)">
       {{ isLogin ? 'Connexion' : 'Inscription' }}
     </button>
-
     <div *ngIf="errorMessage" class="error-message">
-      {{ errorMessage }} </div>
+      {{ errorMessage }}
+    </div>
   </form>
 </div>
