--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,7 +1,7 @@
-<div *ngIf="showLoginScreen">
+<div *ngIf="uiService.showLoginScreen">
     <app-connexion></app-connexion>
 </div>
-<div *ngIf = "!showLoginScreen">
+<div *ngIf="!uiService.showLoginScreen">
     <div class="hero">
         <div class="hero-subtitle">La meilleure plateforme de quiz en ligne</div>
         <h1 class="hero-title">Testez vos connaissances avec Quiz-IT</h1>
