Update: Changed the login screen into a route instead of a drawer

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -14,7 +14,7 @@
       </ng-container>
 
       <ng-template #loginButton>
-          <a (click)="goToConnection()" class='connexion' style="cursor: pointer;">
+          <a routerLink="/connexion" class='connexion' style="cursor: pointer;">  <!--TODO pouvoir aller en arriere lorsqu'on clique sur connexion une deuxième fois quand on est sur la page connexion-->
               <span>Connexion</span> </a>
       </ng-template>
       </div>
