--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar">
   <div class="logo" routerLink="/">Quiz-IT</div>
-  <div class="nav-links">
-      <a routerLink="/"><span>Accueil</span></a>
+  <div class="nav-links"(click)="closeDashboard()">
+      <a routerLink="/" ><span>Accueil</span></a>
       <a routerLink="/quiz"><span>Quiz</span></a>
       <a routerLink="/classement"><span>Classement</span></a>
       <a routerLink="/resultat"><span>Résultat</span></a>
