--- a/src/app/quiz/quiz.component.html
+++ b/src/app/quiz/quiz.component.html
@@ -3,7 +3,7 @@
 
   <div *ngIf="isLoading" class="loading-indicator">
     <p>Loading quizzes...</p>
-    </div>
+  </div>
 
   <div *ngIf="error && !isLoading" class="error-message">
     <p>{{ error }}</p>
@@ -15,10 +15,10 @@
   </div>
 
   <div *ngIf="!isLoading && !error && quizzes.length > 0" class="quiz-list">
-    <div *ngFor="let quiz of quizzes" class="quiz-card">
+    <div *ngFor="let quiz of quizzes" class="quiz-card" (click)="viewQuizDetails(quiz.quizId)" role="button" tabindex="0" (keydown.enter)="viewQuizDetails(quiz.quizId)">
       <h2>{{ quiz.title }}</h2>
       <p *ngIf="quiz.description">{{ quiz.description }}</p>
-      <button class="btn btn-start-quiz">Start Quiz</button>
+      <button class="btn btn-view-details" (click) = "viewQuizDetails(quiz.quizId)">View Details</button>
     </div>
   </div>
 </div>
