UPDATE : Modif du bouton de connexion pour ajouter inscription

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -16,7 +16,7 @@
 
       <ng-template #loginButton>
           <a routerLink="/connexion" class='connexion' style="cursor: pointer;">  <!--TODO pouvoir aller en arriere lorsqu'on clique sur connexion une deuxième fois quand on est sur la page connexion-->
-              <span>Connexion</span> </a>
+              <span>Connexion/Inscription</span> </a>
       </ng-template>
       </div>
 </nav>
