used the public api

--- a/src/app/quiz-details/quiz-details.component.html
+++ b/src/app/quiz-details/quiz-details.component.html
@@ -30,7 +30,7 @@
         <strong>Participants:</strong> {{ quiz.participantsCount }}
       </span>
       <span class = 'meta-item owner-name'> 
-        <strong>Created by: </strong> {{quiz.creator?.name}}
+        <strong>Created by: </strong> {{quiz.creator?.username}}
       </span>
     </div>
 
