--- a/src/app/user-profil/user-profil.component.html
+++ b/src/app/user-profil/user-profil.component.html
@@ -1,22 +1,9 @@
-<div class="container">
-    
-  <div class="profile-view">
-    <h3>Profil Utilisateur</h3>
-    <p>Nom : {{ user.name }}</p>
-    <p>Email : {{ user.email }}</p>
-  </div>
 
+  <h1>Détails de l'utilisateur</h1>
+  <ul>
+    <li><strong>ID :</strong>{{ user.id }}</li>
+    <li><strong>Nom :</strong> {{ user.name }}</li>
+    <li><strong>Email :</strong> {{ user.email }}</li>
 
-  <div class="profile-edit">
-    <h3>Modifier le profil</h3>
-    <form (ngSubmit)="saveChanges()">
-      <label>Nom</label>
-      <input type="text" [(ngModel)]="editedUser.name" name="name" />
+  </ul>
 
-      <label>Email</label>
-      <input type="email" [(ngModel)]="editedUser.email" name="email" />
-
-      <button type="submit">Enregistrer</button>
-    </form>
-  </div>
-</div>
