--- a/src/app/quiz-details/quiz-details.component.html
+++ b/src/app/quiz-details/quiz-details.component.html
@@ -17,8 +17,8 @@
       <span *ngIf="quiz.category" class="meta-item category">
         <strong>Categorie:</strong> {{ quiz.category.name }}
       </span>
-      <span *ngIf="quiz.difficultyLevel" class="meta-item difficulty">
-        <strong>Difficulté:</strong> {{ quiz.difficultyLevel }}
+      <span *ngIf="quiz.dificulty !== undefined" class="meta-item difficulty">
+        <strong>Difficulté:</strong> {{ getDifficultyString(quiz.dificulty) }}
       </span>
       <span *ngIf="quiz.totalQuestions !== undefined" class="meta-item questions-count">
         <strong>Questions:</strong> {{ quiz.totalQuestions }}
@@ -29,8 +29,8 @@
       <span *ngIf="quiz.participantsCount !== undefined" class="meta-item participants-count">
         <strong>Participants:</strong> {{ quiz.participantsCount }}
       </span>
-      <span class = 'meta-item owner-name'> 
-        <strong>Created by: </strong> {{quiz.creator?.username}}
+      <span class = 'meta-item owner-name'>
+        <strong>Createur: </strong> {{quiz.creatorUsername}}
       </span>
     </div>
 
