--- a/src/app/quiz/quiz.component.html
+++ b/src/app/quiz/quiz.component.html
@@ -4,6 +4,9 @@
   <div *ngIf="isLoading" class="loading-indicator">
     <p>Chargement des quiz...</p>
   </div>
+  <div class = 'create'> 
+    <button (click) ="createQuiz()" class = "create-btn" >Create Quiz</button>
+  </div>
 
   <div *ngIf="error && !isLoading" class="error-message">
     <p>{{ error }}</p>
