UPDATE : Modification de l'accès au profil utilisateurs
Le profil utilisateur n’est plus accessible depuis la barre de navigation. Il n’est désormais accessible qu’à partir du tableau de bord, après connexion.

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -3,7 +3,7 @@
     <div class="drawer-section">
       <h3 class="drawer-section-title">User Actions</h3>
       <ul>
-        <li><a routerLink="/dashboard/profile" (click)="onNavigate()">Profil</a></li>
+        <li><a routerLink="profil" (click)="onNavigate()">Profil</a></li>
         <li><a routerLink="/dashboard/settings" (click)="onNavigate()">Paramètres</a></li>
         <li><a routerLink="/dashboard/stats" (click)="onNavigate()">Statistiques</a></li>
       </ul>
