--- a/src/app/user-profil/user-profil.component.html
+++ b/src/app/user-profil/user-profil.component.html
@@ -7,7 +7,7 @@
     </div>
 
   <div *ngIf="user && !isLoading && !errorMessage">
-    <h1>Détails de l'utilisateur</h1>
+    <h1>Profil de l'utilisateur</h1>
     <ul>
       <li><strong>Nom :</strong> {{ user.username }}</li>
       <li><strong>Email :</strong> {{ user.email }}</li>
