--- a/src/app/quiz/quiz.component.html
+++ b/src/app/quiz/quiz.component.html
@@ -1,6 +1,6 @@
 <div class="quiz-container">
   <h1 *ngIf="!categoryId" class="page-title">TOUS LES QUIZ</h1>
-  <h1 *ngIf="categoryId" class="page-title">QUIZ {{categoryName}}</h1>
+  <h1 *ngIf="categoryId" class="page-title">QUIZ <br>{{categoryName}}</h1>
 
   <div *ngIf="isLoading" class="loading-indicator">
     <p>Chargement des quiz...</p>
